--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,30 +1,27 @@
-<%= form_for @article do |f| %>
-
-  <% if @article.errors.any? %>
+<%= form_for(article) do |f| %>
+  <% if article.errors.any? %>
     <div id="error_explanation">
-      <h2>
-        <%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:
-      </h2>
+      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+
       <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
+      <% article.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
       </ul>
     </div>
   <% end %>
 
-  <p>
-    <%= f.label :title %><br>
+  <div class="field">
+    <%= f.label :title %>
     <%= f.text_field :title %>
-  </p>
+  </div>
 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
+  <div class="field">
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+  </div>
 
-  <p>
+  <div class="actions">
     <%= f.submit %>
-  <p>
-
+  </div>
 <% end %>
