--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,37 @@
+<p id="notice"><%= notice %></p>
+
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
 </p>
 
 <p>
-  <strong>Text:</strong>
-  <%= @article.text %>
+  <strong>Body:</strong>
+  <%= @article.body %>
 </p>
-
-<h2>Comments</h2>
-<%= render @article.comments %>
-
 <h2>Add a comment:</h2>
-<%= render 'comments/form' %>
-
-<%= link_to 'Edit', edit_article_path(@article) %>
+<% @article.comments.each do |comment| %>
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.commenter %>
+  </p>
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_field :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
+<%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
